aula 48: - adição da dependencia para utilização do 'spring-boot-starter-actuator' em pom.xml; - adição da regra do antmatchers em SecurityConfig para permitir os requests para o actuator; - adição da configuração de explosição dos serviços do actuator em application.tml; - adição das informações do projeto em application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,14 @@ logging:
     org:
       hibernate:
         SQL: DEBUG
+
+management:
+  endpoint:
+    web:
+      exposure:
+        include: "*"
+
+info:
+  app: Spring Boot 2 Essentials
+  website: https://www.linkedin.com/in/tuliomuller/
+  github: https://github.com/mmtulio/springboot2-essentials
