aula 49: - correção configuração actuator em application.yml; - adição config prometheus em prometheus.yml; - adição configuração prometheus para docker; - adição dependencias prometheus em pom.xml.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,10 +19,10 @@ logging:
         SQL: DEBUG
 
 management:
-  endpoint:
+  endpoints:
     web:
       exposure:
-        include: "*"
+        include: info, health, metrics, prometheus
 
 info:
   app: Spring Boot 2 Essentials
